# app-reviews-insights-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  EDGE_CASES.md  EVALUATIONS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: pulse.yml
config/: products.yaml  pulse.yaml
docs/: local-scheduling.md
src/pulse/: __init__.py  cli.py  config.py  run.py  web_portal.py
src/pulse/delivery/: docs.py  gmail.py  mcp_client.py  orchestrator.py
src/pulse/ingestion/: __init__.py  app_store.py  base.py  normalize.py  play_store.py
src/pulse/observability/: cleanup.py  logging.py  metrics.py
src/pulse/reasoning/: cluster.py  embed.py  theme.py  validate.py
src/pulse/rendering/: docops.py  email.py  report.py
src/pulse/rendering/templates/: email.html  email.txt
src/pulse/safety/: __init__.py  budget.py  envelopes.py  outbound.py  scrub.py
src/pulse/storage/: runs.py  sqlite.py
tests/fixtures/rendering/: docops_groww.json  email_groww.html  email_groww.txt
tests/fixtures/safety/: pii_corpus.yaml  real_sample.txt
tests/integration/: test_phase1_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py
tests/unit/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py
